@@ -14,6 +14,9 @@ __explicit_bzero_hook(void *ATTR_UNUSED(buf), size_t ATTR_UNUSED(len))
 void
 explicit_bzero(void *buf, size_t len)
 {
+#ifdef UB_ON_WINDOWS
+	SecureZeroMemory(buf, len);
+#endif
 	memset(buf, 0, len);
 	__explicit_bzero_hook(buf, len);
 }
